# librario

./: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: album.rs  main.rs  state.rs
src/lib/: AlbumImageView.svelte  AlbumView.svelte  Fs.svelte  TestAwait.svelte  TitleBar.svelte  WindowsTitleBar.svelte  lazyLoad.ts  loadThumbnail.ts
