[package]
name = "librario"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-show", "window-minimize", "window-unminimize", "window-close", "window-unmaximize", "window-start-dragging", "window-hide", "window-maximize", "protocol-asset", "shell-open", "fs-read-dir"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.6"
tokio = "1.29.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
